apps/infra/meilisearch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: meilisearch
  labels:
    app: meilisearch
spec:
  ports:
    - port: 7700
      targetPort: 7700
  selector:
    app: meilisearch
