apps/infra/meilisearch/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: meilisearch
  namespace: meilisearch
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`meilisearch.crussell.io`)
      kind: Rule
      services:
        - name: meilisearch
          port: 7700
  tls:
    certResolver: letsencrypt
